@@ -1,0 +1,5 @@
+
+import Foundation
+final class EditorViewModel: ObservableObject {
+    // TODO: stato immagine e editing non distruttivo
+}
