@@ -1,0 +1,6 @@
+
+import Foundation
+final class PlannerViewModel: ObservableObject {
+    // TODO: integrazione SwiftAA, OpenWeather, Light Pollution Map
+    @Published var moonPhase: Double = 0
+}
