@@ -1,4 +1,5 @@
 
+<<<<<<< HEAD
 # AstroStackerPro (Preview)
 
 App di astrofotografia avanzata per iPhone 16 Pro Max.
@@ -12,3 +13,15 @@ Questo pacchetto contiene struttura, codice di base e materiale UI di anteprima.
 - RAW/ProRAW, Stacking (max/media), AI denoise, Super-resolution, Pianificazione, Dark/Flat/Bias, Derotazione, Multi-camera HDR, Editor, Cloud.
 
 Questa versione include codice minimale. La versione full verrà aggiunta nella prossima push.
+=======
+# AstroStackerPro – FULL
+Carica tutto nel repo GitHub.
+
+## Cartelle
+- AstroStackerPro/Sources/... : codice Swift
+- Docs/: documentazione e changelog
+- AstroStackerPro/Assets/: placeholder asset
+
+## Build
+Apri con Xcode, imposta Bundle ID, compila su iPhone.
+>>>>>>> bd460ab (Full project)
